# rules_nixpkgs

./: .bazelignore  .bazelrc  .bazelrc.cc  .bazelrc.ci  .bazelrc.common  .bazelrc.java  .bazelrc.remote-cache  .envrc  .gitattributes  .gitignore  .mergify.yml  AUTHORS  BUILD  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS  README.md  WORKSPACE  bazel-shell.nix  dump_env.py  entrypoint.py  flake.nix  guide.md  nix-repositories.bzl  nixpkgs.json  nixpkgs.nix  shell.nix
.bcr/: config.yml
assets/: README.md  (+2 more)
core/: .bazelignore  .bazelrc  BUILD.bazel  BUILD.bazel.tpl  BUILD.repo  MODULE.bazel  README.md  WORKSPACE  default.nix.tpl  dummy.bzl  extensions.bzl  flake.nix  nixpkgs.bzl  nixpkgs.nix  test_dependencies_1.bzl  test_dependencies_2.bzl  util.bzl
core/constraints/: BUILD.bazel
core/docs/: BUILD.bazel  copy-files.sh  dependencies_1.bzl  dependencies_2.bzl  stardoc.bzl
core/docs/templates/: header.vm
core/extensions/: package.bzl  package_simple.bzl  repository.bzl  repository_simple.bzl  rules_nixpkgs.bzl
core/private/: get_cpu_value.bzl  module_registry.bzl
core/private/cc_toolchain/: BUILD.bazel  BUILD.tpl  README.md  armeabi_cc_toolchain_config.bzl  lib_cc_configure.bzl  linux_cc_wrapper.sh.tpl  osx_cc_wrapper.sh.tpl  unix_cc_toolchain_config.bzl
core/private/extensions/: packages.bzl  repositories.bzl
core/testing/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md
core/tests/: BUILD.bazel
docs/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md.tpl  README_cc.md.tpl  README_core.md.tpl  README_go.md.tpl  README_java.md.tpl  README_posix.md.tpl  README_python.tpl  README_rust.md.tpl  WORKSPACE  check-readme.sh  compare-files.sh  copy-files.sh  dependencies_1.bzl  dependencies_2.bzl  remote-execution-tutorial.md  stardoc.bzl  update-readme.sh
docs/templates/: aspect.vm  func.vm  provider.vm  rule.vm
examples/cc-template/: .bazelrc  .envrc  .gitignore  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  flake.nix
examples/cc-template/src/: hello-world.cc
examples/flakes/: .bazelrc  .gitignore  MODULE.bazel  README.md  WORKSPACE  extension.bzl  flake.nix
examples/python-container/: .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE  extension.bzl  hello.py  nixpkgs.json  python310_base_image.nix  python312_base_image.nix  python39_base_image.nix  python3_base_image.nix  rules_docker-skip-register-go-toolchains.diff  shell.nix
nixpkgs/: BUILD  BUILD.bazel  BUILD.pkg  drv_set_builder.nix  json_to_files.py  nixpkgs.bzl  prebuild_BUILD.pkg  repositories.bzl  setup_nix.sh  toolchain.bzl  toolchains.bzl
nixpkgs/constraints/: BUILD.bazel
nixpkgs/private/: constraints.bzl  location_expansion.bzl
nixpkgs/toolchains/: cc.nix  foreign_cc.bzl  go.bzl  rust.bzl
nixpkgs/toolchains/java/: local_java_repository.bzl
testing/cc/: MODULE.bazel  WORKSPACE
testing/cc/tests/: cc-test.cc  nixpkgs_repositories.bzl
testing/core/: .bazelignore  .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE  WORKSPACE.bzlmod  flake.nix  nixpkgs.nix  nixpkgs_repositories.bzl  non_module_deps.bzl
testing/core/tests/: .bazelignore  BUILD.bazel  location_expansion.nix  location_expansion.sh  location_expansion_unit_test.bzl  module_registry_tests.bzl  nixpkgs_repositories.bzl  pkgname.nix  relative_imports.nix  test_bin.sh  util.bzl
testing/core/tests/intermediate_module/: .bazelrc  BUILD.bazel  MODULE.bazel
testing/core/workspace_nixpkgs_packages/: defs.bzl
testing/core/workspace_nixpkgs_repositories/: defs.bzl
testing/go/: MODULE.bazel  WORKSPACE
testing/go/tests/: BUILD.bazel  nixpkgs_repositories.bzl
testing/java/: .bazelrc  MODULE.bazel  WORKSPACE
testing/java/patches/: remote_java_tools.patch  rules_java.patch
testing/java/tests/: BUILD.bazel  JavaTest.java  nixpkgs_repositories.bzl
testing/nodejs/: MODULE.bazel  WORKSPACE  WORKSPACE.bzlmod
testing/nodejs/tests/: BUILD.bazel  nixpkgs_repositories.bzl  nodejs-test.bzl
testing/posix/: MODULE.bazel  WORKSPACE
testing/posix/tests/: BUILD.bazel  nixpkgs_repositories.bzl  posix-test.bzl  test_posix_toolchain.sh
testing/python/: .bazelignore  .bazelrc  MODULE.bazel  WORKSPACE  mach-nix.nix  poetry.nix  poetry2nix.nix  pyproject.toml  requirements.txt  vanilla.nix
testing/python/tests/: BUILD.bazel  import_packages_test.py  interpreter_test.py  nixpkgs_repositories.bzl  python-test.nix
testing/rust/: .bazelrc  MODULE.bazel  WORKSPACE  patches
testing/rust/tests/: BUILD.bazel  nixpkgs_repositories.bzl  rust-test.bzl
tests/: BUILD  BUILD.bazel  c-test.c  cc-import-test.cc  cc-test.bzl  fetchTarball.nix  hello.nix  java-test.bzl  location_expansion.nix  location_expansion.sh  location_expansion_unit_test.bzl  major.nix  minor.nix  nixpkgs.nix  output.nix  python-test.nix  python-test.py  test_invalid_nixpkgs_package.sh  test_output.sh  version.nix
tests/invalid_nixpkgs_package/: BUILD.bazel  default.nix  nested-build.bazel  workspace.bazel
tests/location_expansion/: escaped_string
toolchains/cc/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  cc.bzl  cc.nix  foreign_cc.bzl
toolchains/cc/docs/: BUILD.bazel
toolchains/cc/tests/: BUILD.bazel
toolchains/go/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  go.bzl  go.nix
toolchains/go/docs/: BUILD.bazel
toolchains/go/tests/: BUILD.bazel
toolchains/java/: .bazelignore  .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  default_java_toolchain.bzl  java.bzl  local_java_repository.bzl
toolchains/java/docs/: BUILD.bazel
toolchains/java/tests/: java-test.bzl
toolchains/nodejs/: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  nodejs.bzl
toolchains/nodejs/docs/: BUILD.bazel
toolchains/nodejs/extensions/: BUILD.bazel  toolchain.bzl
toolchains/nodejs/private/: BUILD.bazel  common.bzl
toolchains/nodejs/testing/: .bazelignore  .bazelrc  MODULE.bazel  WORKSPACE  WORKSPACE.bzlmod  nixpkgs.nix  non_module_deps.bzl
toolchains/nodejs/tests/: BUILD.bazel  nodejs-test.js
transitive_1/: BUILD.bazel  MODULE.bazel  extensions.bzl
transitive_2/: BUILD.bazel  MODULE.bazel  patched_22_11.nix
(+225 files in other folders)
