load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "srcs",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)

# necessary boilerplate: to build a Bazel library, we always need to include
# `bazel_tools` as a dependency.
# `@bazel_tools//tools` does not define a `bzl_library` itself, instead we
# have to define our own using the `@bazel_tools//tools:bzl_srcs` filegroup.
# https://github.com/bazelbuild/skydoc/issues/166
# https://github.com/bazelbuild/stardoc/issues/38#issuecomment-568909109
bzl_library(
    name = "bazel_tools",
    srcs = [
        "@bazel_tools//tools:bzl_srcs",
    ],
)

bzl_library(
    name = "nixpkgs",
    srcs = [
        "nixpkgs.bzl",
        "util.bzl",
        "private/get_cpu_value.bzl",
    ],
    deps = [
        ":bazel_tools",
        "@bazel_skylib//lib:paths",
        "@bazel_skylib//lib:versions",
    ],
)
