module(
    name = "rules_nixpkgs_core",
    version = "0.11.1",
)

bazel_dep(name = "platforms", version = "0.0.4")
bazel_dep(name = "bazel_skylib", version = "1.0.3")

nix_repo = use_extension("//extensions:repository.bzl", "nix_repo")
nix_repo.github(
    name = "nixpkgs",
    tag = "22.11",
    sha256 = "ddc3428d9e1a381b7476750ac4dbea7a42885cbbe6e1af44b21d6447c9609a6f",
)
use_repo(nix_repo, "nixpkgs")
