module(
    name = "rules_nixpkgs_core",
    version = "0.12.0",
)

bazel_dep(name = "platforms", version = "0.0.4")
bazel_dep(name = "bazel_skylib", version = "1.0.3")

nix_repo = use_extension("//extensions:repository.bzl", "nix_repo")
nix_repo.github(
    name = "nixpkgs",
    tag = "24.05",
    sha256 = "911314b81780f26fdaf87e17174210bdbd40c86bac1795212f257cdc236a1e78",
)
use_repo(nix_repo, "nixpkgs")
