load("@rules_nixpkgs_core//docs:stardoc.bzl", "generate")

generate(
    name = "README.md",
    inputs = ["//nixpkgs:nixpkgs.bzl"],
    symbol_names = [
        "nixpkgs_git_repository",
        "nixpkgs_local_repository",
        "nixpkgs_package",
        "nixpkgs_cc_configure",
        "nixpkgs_cc_configure_deprecated",
        "nixpkgs_java_configure",
        "nixpkgs_python_configure",
        "nixpkgs_rust_configure",
        "nixpkgs_go_configure",
        "nixpkgs_sh_posix_configure",
    ],
    deps = [
        "@bazel_skylib//lib:new_sets",
        "@bazel_skylib//lib:paths",
        "@bazel_skylib//lib:sets",
        "@bazel_skylib//lib:versions",
        "@rules_nixpkgs_cc//:cc",
        "@rules_nixpkgs_core//:nixpkgs",
        "@rules_nixpkgs_go//:go",
        "@rules_nixpkgs_java//:java",
        "@rules_nixpkgs_posix//:posix",
        "@rules_nixpkgs_python//:python",
        "@rules_nixpkgs_rust//:rust",
    ],
)

alias(
    name = "update-readme",
    actual = "update-README.md",
)

alias(
    name = "check-readme",
    actual = "check-README.md",
)
