load("@rules_nixpkgs_core//docs:stardoc.bzl", "generate_documentation")

generate_documentation(
    name = "README.md",
    input = "//nixpkgs:nixpkgs.bzl",
    symbol_names = [
        "nixpkgs_git_repository",
        "nixpkgs_local_repository",
        "nixpkgs_package",
        "nixpkgs_cc_configure",
        "nixpkgs_cc_configure_deprecated",
        "nixpkgs_java_configure",
        "nixpkgs_python_configure",
        "nixpkgs_rust_configure",
        "nixpkgs_sh_posix_configure",
        "nixpkgs_nodejs_configure",
    ],
    deps = [
        "//nixpkgs",
    ],
)

alias(
    name = "update-readme",
    actual = "update-README.md",
)

alias(
    name = "check-readme",
    actual = "check-README.md",
)
