load(":stardoc.bzl", "generate_documentation")

exports_files([
    "stardoc.bzl",
    "copy-files.sh",
    "compare-files.sh",
] + glob(["templates/*"]))

generate_documentation(
    name = "README.md",
    input = "@io_tweag_rules_nixpkgs//nixpkgs:nixpkgs.bzl",
    symbol_names = [
        "nixpkgs_git_repository",
        "nixpkgs_http_repository",
        "nixpkgs_local_repository",
        "nixpkgs_package",
        "nixpkgs_flake_package",
        "nixpkgs_cc_configure",
        "nixpkgs_cc_configure_deprecated",
        "nixpkgs_go_configure",
        "nixpkgs_java_configure",
        "nixpkgs_python_configure",
        "nixpkgs_python_repository",
        "nixpkgs_rust_configure",
        "nixpkgs_sh_posix_configure",
        "nixpkgs_nodejs_configure",
        "nixpkgs_nodejs_configure_platforms",
    ],
    deps = [
        "@io_tweag_rules_nixpkgs//nixpkgs",
    ],
)

alias(
    name = "update-readme",
    actual = "update-README.md",
)

alias(
    name = "check-readme",
    actual = "check-README.md",
)
