load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "srcs",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "nixpkgs",
    srcs = ["nixpkgs.bzl"],
    deps = [
        "@bazel_skylib//lib:new_sets",
        "@bazel_skylib//lib:paths",
        "@bazel_skylib//lib:sets",
        "@bazel_skylib//lib:versions",
        "@rules_nixpkgs_cc//:cc",
        "@rules_nixpkgs_core//:bazel_tools",
        "@rules_nixpkgs_core//:nixpkgs",
        "@rules_nixpkgs_java//:java",
        "@rules_nixpkgs_nodejs//:nodejs",
        "@rules_nixpkgs_posix//:posix",
        "@rules_nixpkgs_python//:python",
        "@rules_nixpkgs_rust//:rust",
    ],
)

alias(
    name = "toolchains_go",
    actual = "@rules_nixpkgs_go//:go",
)
