package(default_testonly = 1)

sh_test(
    name = "run-test-invalid-nixpkgs-package",
    timeout = "short",
    srcs = ["test_invalid_nixpkgs_package.sh"],
    data = [
        "//nixpkgs:srcs",
        "//tests/invalid_nixpkgs_package:srcs",
        "@coreutils_static//:bin",
        "@nix-unstable//:bin",
        "@rules_nixpkgs_cc//:srcs",
        "@rules_nixpkgs_core//:srcs",
        "@rules_nixpkgs_java//:srcs",
        "@rules_nixpkgs_posix//:srcs",
        "@rules_nixpkgs_python//:srcs",
        "@rules_nixpkgs_rust//:srcs",
    ],
)
