load(":stardoc.bzl", "generate_documentation")

exports_files([
    "stardoc.bzl",
    "copy-files.sh",
    "compare-files.sh",
] + glob(["templates/*"]))

generate_documentation(
    name = "README.md",
    input = "//:nixpkgs.bzl",
    symbol_names = [
        "nixpkgs_git_repository",
        "nixpkgs_local_repository",
        "nixpkgs_package",
    ],
    deps = ["//:nixpkgs"],
)
