module(name = "rules_nixpkgs_flakes_example")

bazel_dep(name = "rules_nixpkgs_core")
local_path_override(
    module_name = "rules_nixpkgs_core",
    path = "../../core",
)

bazel_dep(name = "rules_nixpkgs_cc")
local_path_override(
    module_name = "rules_nixpkgs_cc",
    path = "../../toolchains/cc",
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.14")

nix_repo = use_extension("@rules_nixpkgs_core//extensions:repository.bzl", "nix_repo")
nix_repo.flake(
    name = "nixpkgs",
    lock_file = "//:flake.lock",
    file_deps = ["//:flake.lock"],
)
use_repo(nix_repo, "nixpkgs")

#
# Toolchains
#

cc_configure = use_extension("//:extension.bzl", "cc_configure")
use_repo(cc_configure, "nixpkgs_config_cc")
use_repo(cc_configure, "nixpkgs_config_cc_toolchains")
use_repo(cc_configure, "nixpkgs_config_cc_info")

register_toolchains("@nixpkgs_config_cc_toolchains//:all")
