constraint_value(
    name = "nixpkgs",
    constraint_setting = "@bazel_tools//tools/cpp:cc_compiler",
    visibility = ["//visibility:public"],
)

platform(
    name = "linux_x86_64_nixpkgs",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        "@io_tweag_rules_nixpkgs//nixpkgs/constraints:nixpkgs",
    ],
    visibility = ["//visibility:public"],
)

platform(
    name = "darwin_x86_64_nixpkgs",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:osx",
        "@io_tweag_rules_nixpkgs//nixpkgs/constraints:nixpkgs",
    ],
    visibility = ["//visibility:public"],
)
