package(default_visibility = ["//visibility:public"])

constraint_setting(name = "nix")

constraint_value(
    name =  "support_nix",
    constraint_setting = ":nix",
)

constraint_value(
    name = "nixpkgs",
    constraint_setting = "@bazel_tools//tools/cpp:cc_compiler",
    deprecation = "Use support_nix constraint value instead.",
)

platform(
    name = "linux_x86_64_nixpkgs",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        "@io_tweag_rules_nixpkgs//nixpkgs/constraints:nixpkgs",
    ],
    deprecation = "Use @io_tweag_rules_nixpkgs//platforms:host instead.",
    visibility = ["//visibility:public"],
)

platform(
    name = "darwin_x86_64_nixpkgs",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:osx",
        "@io_tweag_rules_nixpkgs//nixpkgs/constraints:nixpkgs",
    ],
    deprecation = "Use @io_tweag_rules_nixpkgs//platforms:host instead.",
    visibility = ["//visibility:public"],
)
