module(name = "rules_nixpkgs_cc_testing")

bazel_dep(name = "rules_nixpkgs_cc")
local_path_override(
    module_name = "rules_nixpkgs_cc",
    path = "../../toolchains/cc",
)

bazel_dep(name = "rules_nixpkgs_core")
local_path_override(
    module_name = "rules_nixpkgs_core",
    path = "../../core",
)
