module(name = "rules_nixpkgs_core_testing")

bazel_dep(name = "rules_nixpkgs_core")
local_path_override(
    module_name = "rules_nixpkgs_core",
    path = "../../core",
)

bazel_dep(name = "bazel_skylib", version = "1.0.3")

bazel_dep(name = "nixpkgs_location_expansion_test_file")
local_path_override(
    module_name = "nixpkgs_location_expansion_test_file",
    path = "tests/location_expansion/test_repo",
)

nix_repo = use_extension("@rules_nixpkgs_core//extensions:repository.bzl", "nix_repo")
use_repo(nix_repo, "nixpkgs_repositories")
nix_repo.default(name = "nixpkgs")
nix_repo.github(
    name = "remote_nixpkgs",
    tag = "22.05",
    sha256 = "0f8c25433a6611fa5664797cd049c80faefec91575718794c701f3b033f2db01",
)
nix_repo.http(
    name = "http_nixpkgs",
    url = "https://github.com/NixOS/nixpkgs/archive/refs/tags/22.05.tar.gz",
    sha256 = "0f8c25433a6611fa5664797cd049c80faefec91575718794c701f3b033f2db01",
    strip_prefix = "nixpkgs-22.05",
)
nix_repo.file(
    name = "file_nixpkgs",
    file = "//:nixpkgs.nix",
    file_deps = [
        "//:flake.lock",
    ],
)
nix_repo.expr(
    name = "nixpkgs_content",
    expr = "import ./nixpkgs.nix",
    file_deps = [
        "//:nixpkgs.nix",
        "//:flake.lock",
    ],
)

nix_pkg = use_extension("@rules_nixpkgs_core//extensions:package.bzl", "nix_pkg")
use_repo(nix_pkg, "nixpkgs_packages")
nix_pkg.attr(attr = "hello")
nix_pkg.local_attr(name = "attribute-test", attr = "hello")
nix_pkg.local_attr(name = "nixpkgs-git-repository-test", attr = "hello", repo = "remote_nixpkgs")

non_module_deps = use_extension("//:non_module_deps.bzl", "non_module_deps")
use_repo(non_module_deps, "expr-test")
use_repo(non_module_deps, "expr-attribute-test")
use_repo(non_module_deps, "extra-args-test")
use_repo(non_module_deps, "nix-file-test")
use_repo(non_module_deps, "nix-file-deps-test")
use_repo(non_module_deps, "nixpkgs-http-repository-test")
use_repo(non_module_deps, "nixpkgs-file-repository-test")
use_repo(non_module_deps, "nixpkgs-local-repository-test")
use_repo(non_module_deps, "relative-imports")
use_repo(non_module_deps, "output-filegroup-test")
use_repo(non_module_deps, "output-filegroup-manual-test")
use_repo(non_module_deps, "nixpkgs_location_expansion_test")
