module(name = "rules_nixpkgs_java_testing")

bazel_dep(name = "rules_nixpkgs_java")
local_path_override(
    module_name = "rules_nixpkgs_java",
    path = "../../toolchains/java",
)

bazel_dep(name = "rules_nixpkgs_core")
local_path_override(
    module_name = "rules_nixpkgs_core",
    path = "../../core",
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")

# TODO[AH] Remove these transitive dependencies once nixpkgs_java_configure has
#   become a module extension in rules_nixpkgs_java.
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_java", version = "7.3.1")
single_version_override(
    module_name = "rules_java",
    patches = ["//patches:rules_java.patch"],
    patch_strip = 1,
)

non_module_deps = use_extension("//:non_module_deps.bzl", "non_module_deps")
use_repo(non_module_deps, "nixpkgs")
use_repo(non_module_deps, "nixpkgs_java_runtime")
use_repo(non_module_deps, "nixpkgs_java_runtime_toolchain")
register_toolchains("@nixpkgs_java_runtime_toolchain//:all")
